--- a/20160726-test_scores/index.html
+++ b/20160726-test_scores/index.html
@@ -190,7 +190,7 @@ d3.csv("./data/scores.csv", function(d) {
     id: d.SchoolID,
     district: d.districtname_new,
     school: d.SCHOOLNAME_NEW,
-    type: d.SchoolType,
+    type: d.Grades,
     metro: d.Metro7county,
     region: d.Location,
     location: d.SchoolLocationCountyName,
